All tabs content done

--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,11 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.sensa.dev" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sensa
+
 # Build settings
-# theme: minima
-# plugins:
-#   - jekyll-feed
+theme: minima
+plugins:
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -38,16 +39,14 @@ twitter_username: sensa
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - circle.yml
-  - firebase.json
-  - README.md
-  - node_modules
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/
-  - functions/
-  - deploy.sh
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
